--- a/index.html
+++ b/index.html
@@ -81,6 +81,6 @@
       </div>
     </div>
     <footer></footer>
-    <script src="/src/app.js"></script>
+    <script type ="module" src="/src/app.js"></script>
   </body>
 </html>
